--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
 		<link rel="stylesheet" href="css/main.css" />
 
 		<!-- Scripts -->
+		<script src="https://nosuite.ngwy.fr/scripts/utils.js" defer></script>
 		<script src="./scripts/main.js" defer></script>
 	</head>
 	<body>
