--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
 	</head>
 	<body>
 		<h2>Express template</h2>
-		<p>vroum vroum</p>
+		<p>Name : <span id="name"></span></p>
+		<p>Email : <span id="email"></span></p>
+		<button id="auth">Sign in with Nosuite account</button>
+		<button id="out" disabled>Sign out</button>
 	</body>
 </html>
