Added storage writing and sync test

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
 		<link rel="stylesheet" href="css/main.css" />
 
 		<!-- Scripts -->
+		<script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
 		<script src="https://nosuite.ngwy.fr/scripts/utils.js" defer></script>
 		<script src="./scripts/main.js" defer></script>
 	</head>
@@ -35,5 +36,6 @@
 		<p>Email : <span id="email"></span></p>
 		<button id="auth">Sign in with Nosuite account</button>
 		<button id="out" disabled>Sign out</button>
+		<button id="write" disabled>Write on storage</button>
 	</body>
 </html>
