Add color-scheme meta tag for dark mode support

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, interactive-widget=resizes-content" />
+		<meta name="color-scheme" content="dark" />
 		<meta name="theme-color" content="#131313" />
 		<link rel="icon" href="https://icons.ngwy.fr/badge/resize/none/ffffff/192/192" />
 		<link rel="manifest" href="manifest.json" />
